<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北航就业</string>
    <string name="action_settings">Settings</string>
    <string name="category_importent_notification">重要通知</string>
    <string name="category_center_info">中心招聘</string>
    <string name="category_workplace_info">单位招聘</string>
    <string name="tab_recruitment">招聘会</string>
    <string name="tab_notification">通知信息</string>
    <string name="tab_favourite">我的收藏</string>
    <string name="tab_more">更多</string>
    <string name="pull_to_refresh">请下拉刷新...</string>
    <string name="touch_to_refresh">点击加载更多...</string>
	<string name="refreshing">正在加载...</string>
	<string name="refresh_failed">加载失败，请检查网络连接</string>
	<string name="refresh_failed_footer">加载失败，点击重新加载...</string>
	<string name="tobecontinued1">我们的应用还在开发过程中</string>
	<string name="tobecontinued2">希望听到您的声音...</string>
	<string name="loading">网页正在加载...</string>
	<string name="loading_failed">加载失败，请检查网络连接...</string>
</resources>