<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tab_one_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tab_one_tab_one_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/category_importent_notification"
                    android:textColor="@color/bc_red"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tab_one_tab_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/category_recent_recent_recruitment"
                    android:textColor="@color/bc_gray"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tab_one_tab_three_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/category_center_info"
                    android:textColor="@color/bc_gray"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tab_one_tab_four_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/category_workplace_info"
                    android:textColor="@color/bc_gray"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <com.viewpagerindicator.UnderlinePageIndicator
            android:id="@+id/tab_one_tab_indicator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true" >
        </com.viewpagerindicator.UnderlinePageIndicator>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/tab_one_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>